# WineDB

./: .gitignore  README.md  explore.py  main.py  pyproject.toml  requirements.txt  wineDB.py
app/: app.py
app/cmd_app/: main_handler.py
app/cmd_app/api_utils/: bottles.py
app/cmd_app/handlers/: __init__.py  bottles.py  grapes.py
app/cmd_app/utils/: api.py  constants.py
app/db/: database.py
app/libs/db/: create_db.py
app/routers/: countries.py  food_pairings.py  grapes.py  keywords.py  locations.py  wine_supplies.py  wine_types.py
app/spreadsheet/: __init__.py  generator.py
app/spreadsheet/tabs/: __init__.py  by_drink_by_date.py  by_food_pairing.py  by_grape_variety.py  by_keyword.py  by_region.py  by_type.py  consumed.py
example/: example_inventory.xlsx
seeding/: seed.py
static/: ascii.txt  ascii_generator.py
