[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WineDB"
version = "0.7.0"
description = 'Database for current wines that exist in our stash!'
authors = [
    {name = "Nick Amell", email = "namell91@gmail.com"}
]
requires-python = ">=3.10.0, <3.13.0"
license = {text = "MIT"}
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
urls = {homepage = "https://github.com/nga-27/WineDB"}

dependencies = [
    "python-dotenv",
    "numpy==2.2.6",
    "pandas==2.3.1",
    "requests==2.32.3",
    "xlrd==1.2.0",
    "XlsxWriter==3.2.5",
    "openpyxl==3.1.5",
    "argparse==1.4.0",
    'colorama==0.4.3',
]

[project.optional-dependencies]
dev = [
    'pylint==3.2.5',
    'pycodestyle==2.12.0',
]
exe = [
    'pyinstaller==6.10.0'
]

[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]
